Fix navbar overflow

--- a/_scss/abba/_style.scss
+++ b/_scss/abba/_style.scss
@@ -1,6 +1,6 @@
 .navbar-brand {
 	white-space: nowrap;
-	overflow-x: hidden;
+	overflow: hidden;
 	text-transform: uppercase;
 
 	.icon-abba {
